@@ -2,7 +2,7 @@
 #define RUBY_RELEASE_DATE "2010-11-24"
 #define RUBY_VERSION_CODE 187
 #define RUBY_RELEASE_CODE 20101124
-#define RUBY_PATCHLEVEL 322
+#define RUBY_PATCHLEVEL 323
 
 #define RUBY_VERSION_MAJOR 1
 #define RUBY_VERSION_MINOR 8
