@@ -1,3 +1,8 @@
+Wed Nov 24 15:44:11 2010  NAKAMURA Usaku  <usa@ruby-lang.org>
+
+	* ext/socket/extconf.rb (getaddrinfo): should initialize winsock on
+	  windows.
+
 Wed Nov 24 13:55:21 2010  NAKAMURA Usaku  <usa@ruby-lang.org>
 
 	* win32/setup.mak: use findstr.exe instead of find.exe, because all
